top-bar and main-content into shell

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -1,3 +1,6 @@
-<p>
-  shell works!
-</p>
+<section>
+  <nab-top-bar></nab-top-bar>
+</section>
+<section>
+  <nab-main-content></nab-main-content>
+</section>
