--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <a href="">Home</a>
-  <a href="">About</a>
+  <a [routerLink]="['']">Home</a>
+  <a [routerLink]="['about']">About</a>
 </nav>
