--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -1,4 +1,5 @@
 <nav>
   <a [routerLink]="['']">Home</a>
   <a [routerLink]="['about']">About</a>
+  <a [routerLink]="['contact']">Contact</a>
 </nav>
