--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -2,4 +2,5 @@
   <a [routerLink]="['']">Home</a>
   <a [routerLink]="['about']">About</a>
   <a [routerLink]="['contact']">Contact</a>
+  <a [routerLink]="['products']">Products</a>
 </nav>
