emit produts from products-list and emit product from product-add

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,2 +1,2 @@
-<nab-product-add></nab-product-add>
-<nab-products-list></nab-products-list>
+<nab-product-add (emitter)="addProduct($event)"></nab-product-add>
+<nab-products-list (emitter)="setProducts($event)"></nab-products-list>
