--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -2,6 +2,9 @@
   <thead>
     <tr>
       <th>
+        ID
+      </th>
+       <th>
         CODE
       </th>
       <th>
@@ -12,6 +15,9 @@
   <tbody>
     
     <tr *ngFor="let product of products; let i = index">
+      <td>
+        {{product.id}}
+      </td>
       <td>
         {{product.code}}
       </td>
