edit product - addOrUpdate -> Put

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -1,6 +1,10 @@
-<section>
-  <nab-top-bar></nab-top-bar>
-</section>
-<section>
-  <nab-main-content></nab-main-content>
-</section>
+<div class="container">
+
+  <section>
+    <nab-top-bar></nab-top-bar>
+  </section>
+  <section>
+    <nab-main-content></nab-main-content>
+  </section>
+
+</div>
