--- a/src/app/products/product-add/product-add.component.html
+++ b/src/app/products/product-add/product-add.component.html
@@ -7,6 +7,6 @@
     <label for="description">Descripcion :</label>
     <input type="text" class="form-control" id="description" placeholder="descripcion del producto" name="code" [(ngModel)]="product.description">
   </div>
-  <button type="submit" (click)="add()">Agregar</button>
+  <button type="submit" (click)="addProduct()">Agregar</button>
 </form>
 <label>{{message}}</label>
