--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -13,19 +13,19 @@
     </tr>
   </thead>
   <tbody>
-    
+
     <tr *ngFor="let product of products; let i = index">
       <td>
-        {{product.id // aqui no me permite usar get}}
+        {{product.getId}}
       </td>
       <td>
-        {{product.code}}
+        {{product.getCode}}
       </td>
       <td>
-        {{product.description}}
+        {{product.getDescription}}
       </td>
       <td>
-        <button (click)="editProduct(i)">Editar</button>
+        <button (click)="editProduct(i)" type="button" class="btn btn-warning">Editar</button>
       </td>
     </tr>
 
