--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -26,6 +26,9 @@
       </td>
       <td>
         <button (click)="editProduct(i)" type="button" class="btn btn-warning">Editar</button>
+        <button (click)="deleteProduct(i)" type="button" class="btn btn-danger">Eliminar</button>
+        <button  type="button" class="btn btn-default">⇑</button>
+        <button  type="button" class="btn btn-default">⇓</button>
       </td>
     </tr>
 
