--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -1,6 +1,29 @@
-<nav>
-  <a [routerLink]="['']">Home</a>
-  <a [routerLink]="['about']">About</a>
-  <a [routerLink]="['contact']">Contact</a>
-  <a [routerLink]="['products']">Products</a>
-</nav>
+<div class="navbar-wrapper">
+  <div class="container">
+
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+            aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+          <a class="navbar-brand" href="#">POS</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+
+            <li><a [routerLink]="['']">Home</a></li>
+            <li><a [routerLink]="['about']">About</a></li>
+            <li><a [routerLink]="['contact']">Contact</a></li>
+            <li><a [routerLink]="['products']">Products</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  </div>
+</div>
