--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -2,12 +2,13 @@
 <form>
   <div class="form-group">
     <label for="code">Nuevo codigo :</label>
-    <input type="text" class="form-control" id="code" placeholder="nuevo codigo de producto" name="code" [(ngModel)]="product.code">
+    <input type="text" class="form-control" id="code" placeholder="nuevo codigo de producto" name="code" (ngModelChange)="product.setCode=$event"
+      [ngModel]="product.getCode">
   </div>
   <div class="form-group">
     <label for="code">Nueva descripcion : </label>
     <input type="text" class="form-control" id="description" placeholder="nueva   descripcion del producto" name="description"
-      [(ngModel)]="product.description">
+      (ngModelChange)="product.setDescription=$event" [ngModel]="product.getDescription">
   </div>
   <button type="submit" (click)="updateProduct()" type="button" class="btn btn-success">Actualizar ID : {{product.getId}}</button>
 </form>
