--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -17,9 +17,10 @@
           <ul class="nav navbar-nav">
 
             <li><a [routerLink]="['']">Home</a></li>
-            <li><a [routerLink]="['about']">About</a></li>
-            <li><a [routerLink]="['contact']">Contact</a></li>
             <li><a [routerLink]="['products']">Products</a></li>
+            <li><a [routerLink]="['clients']">Clients</a></li>
+            <li><a [routerLink]="['contact']">Contact</a></li>
+            <li><a [routerLink]="['about']">About</a></li>
           </ul>
         </div>
       </div>
