sale-document-client

--- a/src/app/clients/clients-detail/clients-detail.component.html
+++ b/src/app/clients/clients-detail/clients-detail.component.html
@@ -1,3 +1,12 @@
-<h4>{{client.industry}}</h4>
-<br><h4>{{client.principalActivity}}</h4>
-<br><h4>{{client.secundaryActivity}}</h4>
+<div class="container row">
+    <div class="col-sm-2">
+        <h5>{client.industry}}</h5>
+    </div>
+
+<div class="col-sm-2">
+    <h5>{{client.principalActivity}}</h5>
+</div>
+<div class="col-sm-2">
+    <h5>{{client.secundaryActivity}}</h5>
+</div>
+</div>
