--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,2 +1,2 @@
 <nab-clients-filter></nab-clients-filter>
-<nab-clients-list></nab-clients-list>
+<nab-clients-list  (emmitter)='receiveClient($event)'></nab-clients-list>
