--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -19,6 +19,7 @@
             <li><a [routerLink]="['']">Home</a></li>
             <li><a [routerLink]="['products']">Products</a></li>
             <li><a [routerLink]="['clients']">Clients</a></li>
+            <li><a [routerLink]="['sale']">Sale</a></li>
             <li><a [routerLink]="['contact']">Contact</a></li>
             <li><a [routerLink]="['about']">About</a></li>
           </ul>
