--- a/src/app/clients/clients-list/clients-list.component.html
+++ b/src/app/clients/clients-list/clients-list.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-12">
+    <div class="table-responsive">
     <table class="table table-hover">
       <thead>
         <tr>
@@ -9,8 +10,8 @@
           <th>Nombre com.</th>
           <th>Cuit</th>
           <th>Fecha de inicio</th>
-          <th>Nro. Celular</th>
-          <th>E-mail</th>
+          <th class="visible-lg visible-sm hidden-xs">Nro. Celular</th>
+      
         </tr>
       </thead>
       <tbody>
@@ -21,13 +22,12 @@
           <td>{{client.tradeName}}</td>
           <td>{{client.taxId}}</td>
           <td>{{client.constitutionDate}}</td>
-          <td>{{client.cellPhone}}</td>
-          <td>{{client.email}}</td>
-
+          <td class="visible-lg visible-sm hidden-xs">{{client.cellPhone}}</td>
         </tr>
       </tbody>
     </table>
   </div>
+</div>
 </div>
 
 <div *ngIf="selectedClient">
