--- a/src/app/clients/clients-detail/clients-detail.component.html
+++ b/src/app/clients/clients-detail/clients-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container row">
     <div class="col-sm-2">
-        <h5>{client.industry}}</h5>
+        <h5>{{client.industry}}</h5>
     </div>
 
 <div class="col-sm-2">
