--- a/src/app/sale-document/sale-document-client/sale-document-client.component.html
+++ b/src/app/sale-document/sale-document-client/sale-document-client.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-1">
-        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalLong">
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#clientModalLong">
             Cliente
         </button>
     </div>
