--- a/src/app/sale-document/sale-document.component.html
+++ b/src/app/sale-document/sale-document.component.html
@@ -1,8 +1,13 @@
 <div class="container">
   <nab-sale-document-client [client]='selectedClientOnPopup'>cargando...</nab-sale-document-client>
   <nab-sale-document-product (emitter)='receiveItem($event)' [product]='selectedProductOnPopup'>cargando...</nab-sale-document-product>
-  <nab-sale-document-body (emitter)="receiveItemArray($event)">cargando...</nab-sale-document-body>
+  <nab-sale-document-body (emitter2)="receiveTotals($event)" (emitter)="receiveItemArray($event)">cargando...</nab-sale-document-body>
+  <nab-sale-document-footer>cargando...</nab-sale-document-footer>
 </div>
+
+
+
+
 
 <!-- Modal CLIENT-->
 <div class="modal fade " id="clientModalLong" tabindex="-1" role="dialog" aria-labelledby="clientModalLongTitle" aria-hidden="true">
