--- a/src/app/sale-document/sale-document-footer/sale-document-footer.component.html
+++ b/src/app/sale-document/sale-document-footer/sale-document-footer.component.html
@@ -2,7 +2,7 @@
       <div class="col-md-3 col-xs-3">
       </div>
       <div class="col-md-4 col-xs-4">
-        <button type="button" class="btn btn-success">EMITIR</button>
+        <button type="button" class="btn btn-success" (click)="emit()">EMITIR</button>
       </div>
       <div class="col-md-5 col-xs-5">
       </div>
