--- a/src/app/sale-document/sale-document-body/sale-document-body.component.html
+++ b/src/app/sale-document/sale-document-body/sale-document-body.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="this.items.length>0">
   <div class="col-md-12">
     <div class="table-responsive">
       <table class="table table-hover">
@@ -65,7 +65,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="totals.subtotal>0">
 
   <div class="col-md-4 col-xs-4">
 
