--- a/src/app/clients/clients-list/clients-list.component.html
+++ b/src/app/clients/clients-list/clients-list.component.html
@@ -1,33 +1,33 @@
 <div class="row">
   <div class="col-md-12">
     <div class="table-responsive">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Codigo</th>
-          <th>Nombre</th>
-          <th>Nombre com.</th>
-          <th>Cuit</th>
-          <th>Fecha de inicio</th>
-          <th class="visible-lg visible-sm hidden-xs">Nro. Celular</th>
-      
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let client of clients"  (click)="onSelectedClient(client)">
-          <td>{{client.id}}</td>
-          <td>{{client.code}}</td>
-          <td>{{client.businessName}}</td>
-          <td>{{client.tradeName}}</td>
-          <td>{{client.taxId}}</td>
-          <td>{{client.constitutionDate}}</td>
-          <td class="visible-lg visible-sm hidden-xs">{{client.cellPhone}}</td>
-        </tr>
-      </tbody>
-    </table>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Codigo</th>
+            <th>Nombre</th>
+            <th>Nombre com.</th>
+            <th>Cuit</th>
+            <th>Fecha de inicio</th>
+            <th class="visible-lg visible-sm hidden-xs">Nro. Celular</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let client of clients" (click)="onSelectedClient(client)">
+            <td>{{client.id}}</td>
+            <td>{{client.code | uppercase }}</td>
+            <td>{{client.businessName | uppercase }}</td>
+            <td>{{client.tradeName | uppercase }}</td>
+            <td>{{client.taxId}}</td>
+            <td>{{client.constitutionDate | date:format }}</td>
+            <td class="visible-lg visible-sm hidden-xs">{{client.cellPhone | phone}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-</div>
 </div>
 
 <div *ngIf="selectedClient">
