basic login with localstorage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
+<div class="container">
+  <p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus, dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
 </p>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus, dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
+</p>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus, dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
+</p>
+<nab-login></nab-login>
+</div>
