user service with mock back end

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,9 +10,9 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
 	<div class="modal-dialog">
 		<div class="loginmodal-container">
-			<h1>Login to Your Account</h1><br>
+			<h1>Iniciar sesion</h1><br>
 			
-			<form  #f="ngForm" (ngSubmit)="login(f.value)" novalidate>
+			<form  #f="ngForm" (ngSubmit)="login(f.value);f.reset();" novalidate>
 				<input type="text" name="user" placeholder="Username" ngModel required>
 				<input type="password" name="pass" placeholder="Password" ngModel required>
 				<input type="submit" name="login" class="login loginmodal-submit" value="Login">
