--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,37 @@
 <div class="container">
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus,
-    dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
-  </p>
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus,
-    dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
-  </p>
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus,
-    dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
-  </p>
+
+  <div class="row">
+
+    <div class="col-sm-4 col-xs-12">
+      <div style="width:200px;height:165px; display: block;margin: 0 auto;">
+        <!--img src="{{'../../assets/images/logo.png'}}" alt="logo-BP" width="100%" height="100%"-->
+        <img [src]="pathLogo" alt="logo-BP" width="100%" height="100%">
+        <!-- DIFERENTES MANERAS DE REFERENCIAR EL LOGO:
+          <img src="{{ angularLogo }}">
+          <img [src]="angularLogo">
+          <img bind-src="angularLogo">
+        -->
+      </div>
+      <br>
+    </div>
+    <div class="col-sm-8 col-xs-12 text-left">
+      <p class="hidden-xs">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus,
+        dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
+      </p>
+      <p class="hidden-xs">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus,
+        dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
+      </p>
+      <p class="hidden-xs">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quasi numquam beatae odit suscipit temporibus repellendus,
+        dolore quibusdam voluptatum nemo exercitationem natus omnis dolores. Error ea dolores illo. Velit, aliquid.
+      </p>
+    </div>
+  </div>
+
+
+
   <hr>
 
 
@@ -28,7 +49,7 @@
       <li>Ventas</li>
     </ul>
   </ng-template>
- 
+
 
   <div class="row text-center">
     <nab-login (emitter)="receiveLogin($event)" (emitter2)="receiveLogout($event)"></nab-login>
